--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" type="text/css" href="assets/reset.css">
+    
     <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
@@ -20,7 +20,7 @@
         </header>
         <!--This is the content area-->
         <div id="content">
-            <h2>Generate a Password</h2>
+            <h2>Welcome to Password Generator </h2> 
             <hr>
             <!-- This is a readonly text area for output-->
             <textarea readonly id="password" placeholder="Your Secure Password"
